# terminal-piano

./: .env  .gitignore  README.md  main.css  main.py  main.tcss  pyproject.toml  requirements.txt  screens.py  songs.py  widgets.py
pianocli/: main.py
src/pianocli/: main.py
