[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pianocli-manasvihow"
version = "1.0.0"
authors = [
  { name="Manasvi Bathula", email="manasvi.bathula@gmail.com" },
]
description = "A playable piano in your terminal."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "pyfluidsynth",
    "typer[all]",
]

[project.scripts]
pianocli-manasvihow = "pianocli.main:cli"


[tool.setuptools]
packages = ["pianocli"]