[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pianocli"
version = "1.1.0"
authors = [
  { name="Manasvi", email="manasvi.bathula@gmail.com" },
]
description = "A playable piano in your terminal."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "pyfluidsynth",
    "typer",
    "requests",
    "appdirs",
]

[project.scripts]
pianocli = "pianocli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pianocli"]

[tool.setuptools.package-data]
pianocli = ["*.tcss"]
